# Editor-de-Video-

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: MediaStructs.h
src/gui/: MainWindow.cpp  MainWindow.h
src/media_engine/: MediaDecoder.cpp  MediaDecoder.h  MediaReader.cpp  MediaReader.h  VideoProcessor.cpp  VideoProcessor.h
